--- a/res/xml-ru/changelog.xml
+++ b/res/xml-ru/changelog.xml
@@ -1,5 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <changelog>
+    <release version="4.9.9 beta 38" versioncode="40938" >
+        <change>Исправлено отображение даты на виджете 4x2 v5</change>
+        <change>Исправлен выбор приложений для клика по прогнозу на виджетах</change>
+        <change>Добавлен Португальский перевод</change>
+    </release>
+    <release version="4.9.9 beta 37" versioncode="40937" >
+        <change>Нажатие на уровень заряда батареи (виджеты 4x2 и 4x3) откроет окно использования батареи телефона</change>
+        <change>Исправлено отображение температуры и иконки погоды виджетов 4x2 и 4x3</change>
+        <change>Исправлен вылет программы при попытке настроить виджеты</change>
+    </release>
+    <release version="4.9.9 beta 35" versioncode="40935" >
+        <change>Возвращена возможность "Скрывать нижнюю панель"</change>
+        <change>Добавлены настройки шрифта для виджетов 4x2 и 4x3 (часы и дата)</change>
+        <change>Логотип поставщика прогноза теперь кликабельный (переход на сайт поставщика)</change>
+        <change>Исправлено уведомление для xxhdpi (когда состояние погоды обрезалось снизу)</change>
+        <change>Оптимизированы иконки погоды</change>
+        <change>Удален фон для сжатого уведомления</change>
+        <change>Добавлена возможность выключить расширенное уведомление</change>
+        <change>Добавлены картинки виджетов v5 для xxhdpi</change>
+        <change>Обновлен перевод</change>
+    </release>
+    <release version="4.9.9 beta 34" versioncode="40934" >
+        <change>Исправлен баг, когда не окрашивались элементы уведомления в шторке на светлых темах (настройка цвета текста уведомления не влияла на сам цвет)</change>
+        <change>Временно удален пункт "Прошивки MIUI"</change>
+        <change>Исправлены ошибки отображения информации в графике на 7 (5) дней</change>
+        <change>Восстановлен пункт меню "Темы"</change>
+        <change>Исправление недочетов в коде и графике</change>
+    </release>
     <release version="4.9.9 beta 33" versioncode="40933" >
         <change>Новая система списка изменений (https://github.com/cketti/ckChangeLog)</change>
         <change>Обновлен перевод</change>
