--- a/res/xml/changelog_master.xml
+++ b/res/xml/changelog_master.xml
@@ -1,5 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <changelog>
+    <release version="4.9.9 beta 38" versioncode="40938" >
+        <change>Fixed date layout for 4x2 v5 widget</change>
+        <change>Fixed widgets forecast click action app chooser</change>
+        <change>Added Portuguese of Portugal translation</change>
+    </release>
+    <release version="4.9.9 beta 37" versioncode="40937" >
+        <change>Clicking on battery level (widgets 4x2 and 4x3) will redirect you to battery usage window</change>
+        <change>Fixed temperature and weather icon layout for 4x2 and 4x3 widgets</change>
+        <change>Fixed FC in widgets setting</change>
+    </release>
+    <release version="4.9.9 beta 35" versioncode="40935" >
+        <change>"Hide bottom bar" option is back</change>
+        <change>Added font settings for 4x2 and 4x3 widgets (clock and date)</change>
+        <change>Weather provider logo is now clickable (redirecting to provider's website)</change>
+        <change>Fixed notification layout for xxhdpi</change>
+        <change>Optimized weather icons</change>
+        <change>Deleted notification background</change>
+        <change>Added ability to turn off expanded notification</change>
+        <change>Added xxhdpi v5 widgets images</change>
+        <change>Updated translations</change>
+    </release>
+    <release version="4.9.9 beta 34" versioncode="40934" >
+        <change>Fixed status bar notification coloring</change>
+        <change>"MIUI ROMs" support is temporary off</change>
+        <change>Fixed some bugs with trend view (7 (5) days forecast)</change>
+        <change>Menu item "Themes" is back</change>
+        <change>Some small code and graphics fixes</change>
+    </release>
     <release version="4.9.9 beta 33" versioncode="40933" >
         <change>New changelog system (https://github.com/cketti/ckChangeLog)</change>
         <change>Updated translations</change>
