--- a/res/values-es-rES/arrays.xml
+++ b/res/values-es-rES/arrays.xml
@@ -24,7 +24,7 @@
         <item>Anguila</item>
         <item>Albania</item>
         <item>Armenia</item>
-        <item>Antillas Neerlandesas</item>
+        <item>Antillas Holandesas</item>
         <item>Angola</item>
         <item>Antártida</item>
         <item>Argentina</item>
