--- a/res/values-zh-rTW/arrays.xml
+++ b/res/values-zh-rTW/arrays.xml
@@ -1,10 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string-array name="citydb_provider_entries">
-        <item>Foreca</item>
-        <item>Accuweather</item>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+    <string-array name="donations_google_android_market_promt_array">
+        <item>1 歐元</item>
+        <item>2 歐元</item>
+        <item>3 歐元</item>
+        <item>5 歐元</item>
+        <item>8 歐元</item>
+        <item>13 歐元</item>
+  	</string-array>    
+    <string-array name="update_interval_names">
+        <item>30 分鐘</item>
+        <item>1 小時</item>
+        <item>2 小時</item>
+        <item>3 小時</item>
+        <item>4 小時</item>
+        <item>6 小時</item>
     </string-array>
-    <string-array name="country_codes">
+    <string-array name="update_interval_values" translatable="false">
+        <item>30</item> 
+        <item>60</item>
+        <item>120</item>
+        <item>180</item>
+        <item>240</item>
+        <item>360</item>
+    </string-array>
+    <string-array name="country_codes" translatable="false">
         <item>ad</item>
         <item>ae</item>
         <item>af</item>
@@ -251,7 +271,7 @@
         <item>zm</item>
         <item>zr</item>
         <item>zw</item>
-        <item>pm</item>
+		<item>pm</item>
     </string-array>
     <string-array name="country_names">
         <item>Andorra</item>
@@ -475,7 +495,7 @@
         <item>Turkey</item>
         <item>Trinidad and Tobago</item>
         <item>Tuvalu</item>
-        <item>Taiwan</item>
+        <item>台灣</item>
         <item>Tanzania</item>
         <item>Ukraine</item>
         <item>Uganda</item>
@@ -500,15 +520,59 @@
         <item>Zambia</item>
         <item>Zaire (former)</item>
         <item>Zimbabwe</item>
-        <item>Saint Pierre and Miquelon</item>
+		<item>Saint Pierre and Miquelon</item>
     </string-array>
-    <string-array name="donations_google_android_market_promt_array">
-        <item>1 歐元</item>
-        <item>2 歐元</item>
-        <item>3 歐元</item>
-        <item>5 歐元</item>
-        <item>8 歐元</item>
-        <item>13 歐元</item>
+    <string-array name="notif_temp_color_entries">
+        <item>黑色</item>
+        <item>白色</item>
+    </string-array>
+    <string-array name="notif_temp_color_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array> 
+    <string-array name="notif_type_entries">
+        <item>溫度</item>
+        <item>天氣圖標</item>
+    </string-array>
+    <string-array name="notif_type_values" translatable="false">
+        <item>temperature_symbol</item>
+        <item>weather_symbol</item>
+    </string-array>     
+    <string-array name="widget42_show_entries">
+        <item>更新日期</item>
+        <item>下次鬧鐘時間</item>
+        <item>電池電量</item>
+        <item>感覺</item>
+        <item>風速</item>
+        <item>濕度</item>
+        <item>最低溫和最高溫</item>
+    </string-array>
+    <string-array name="widget42_show_values" translatable="false">
+        <item>w42_update_date</item>
+        <item>w42_alarm</item>
+        <item>w42_battery</item>
+        <item>w42_feels_like</item>
+        <item>w42_wind</item>
+        <item>w42_humidity</item>
+        <item>w42_low_high</item>
+    </string-array>
+    <string-array name="widget43_show_entries">
+        <item>更新日期</item>
+        <item>下次鬧鐘時間</item>
+        <item>電池電量</item>
+        <item>感覺</item>
+        <item>風速</item>
+        <item>濕度</item>
+        <item>最低溫和最高溫</item>
+    </string-array>
+    <string-array name="widget43_show_values" translatable="false">
+        <item>w43_update_date</item>
+        <item>w43_alarm</item>
+        <item>w43_battery</item>
+        <item>w43_feels_like</item>
+        <item>w43_wind</item>
+        <item>w43_humidity</item>
+        <item>w43_low_high</item>
     </string-array>
     <string-array name="main_show_entries">
         <item>感覺</item>
@@ -517,49 +581,114 @@
         <item>氣壓</item>
         <item>能見度</item>
         <item>日出和日落</item>
-        <item>顯示下一次報時</item>
+        <item>下次鬧鐘時間</item>
     </string-array>
-    <string-array name="moon_phases_entries">
-        <item>本月</item>
-        <item>本年度</item>
-    </string-array>
-    <string-array name="notif_temp_color_entries">
-        <item>黑色</item>
-        <item>白色</item>
-    </string-array>
-    <string-array name="notif_type_entries">
-        <item>溫度</item>
-        <item>天氣圖標</item>
-    </string-array>
-    <string-array name="update_interval_names">
-        <item>30 分鐘</item>
-        <item>1 小時</item>
-        <item>2 小時</item>
-        <item>3 小時</item>
-        <item>4 小時</item>
-        <item>6 小時</item>
-    </string-array>
-    <string-array name="weather_provider_entries">
-        <item>Foreca</item>
-        <item>Weather Underground</item>
-        <item>Accuweather</item>
-    </string-array>
+    <string-array name="main_show_values" translatable="false">
+        <item>main_feel</item>
+        <item>main_wind</item>
+        <item>main_humid</item>
+        <item>main_press</item>
+        <item>main_visib</item>
+        <item>main_sunrize</item>
+        <item>main_next_alarm</item>
+    </string-array>        
+	<string-array name="widget41_show_entries">
+        <item>溫度面板</item>
+        <item>額外訊息面板</item>
+        <item>時間面板</item>
+	</string-array>
+	<string-array name="widget41_show_values" translatable="false">
+        <item>w41_temp</item>
+        <item>w41_cond</item>
+        <item>w41_time</item>
+	</string-array>     
     <string-array name="widget41_data_entries">
         <item>3天內的的預測資料</item>
         <item>今日預測資料</item>
     </string-array>
-    <string-array name="widget41_show_entries">
-        <item>溫度面板</item>
-        <item>額外資料面板</item>
-        <item>時間面板</item>
+    <string-array name="widget41_data_values" translatable="false">
+        <item>w41_3day_forecast</item>
+        <item>w41_forecast_data</item>
+    </string-array>   	
+    <string-array name="pressure_units_entries">
+        <item>@string/pressure_units_mb</item>
+        <item>@string/pressure_units_mmhg</item>
     </string-array>
-    <string-array name="widget42_show_entries">
-        <item>更新日期</item>
-        <item>下次鬧鐘時間</item>
-        <item>電池電量</item>
-        <item>感覺</item>
-        <item>風速</item>
-        <item>濕度</item>
-        <item>低溫和高溫</item>
+    <string-array name="pressure_units_values" translatable="false">
+        <item>pressure_units_mb</item>
+        <item>pressure_units_mmhg</item>
+    </string-array>   
+    <string-array name="wind_speed_units_entries">
+        <item>@string/wind_speed_units_mps</item>
+        <item>@string/wind_speed_units_kmph</item>
+        <item>@string/wind_speed_units_mph</item>
+    </string-array>
+    <string-array name="wind_speed_units_values" translatable="false">
+        <item>wind_speed_units_mps</item>
+        <item>wind_speed_units_kmph</item>
+        <item>wind_speed_units_mph</item>
+    </string-array>  
+    <string-array name="visibility_units_entries">
+        <item>@string/visibility_units_m</item>
+        <item>@string/visibility_units_km</item>
+        <item>@string/visibility_units_mi</item>
+    </string-array>
+    <string-array name="visibility_units_values" translatable="false">
+        <item>visibility_units_m</item>
+        <item>visibility_units_km</item>
+        <item>visibility_units_mi</item>
+    </string-array> 
+    <string-array name="temperature_units_entries">
+        <item>@string/temperature_units_c</item>
+        <item>@string/temperature_units_f</item>
+    </string-array>
+    <string-array name="temperature_units_values" translatable="false">
+        <item>temperature_units_c</item>
+        <item>temperature_units_f</item>
+    </string-array>      
+    <string-array name="date_format_entries">
+        <item>@string/date_format_mdy</item>
+        <item>@string/date_format_dmy</item>
+    </string-array>
+    <string-array name="date_format_values" translatable="false">
+        <item>date_format_mdy</item>
+        <item>date_format_dmy</item>
+    </string-array>   
+    <string-array name="weather_provider_entries">
+        <!--item>MSN Weather</item-->
+        <item>Foreca</item>
+        <item>Weather Underground</item>
+        <item>Accuweather</item>
+    </string-array>
+    <string-array name="weather_provider_values" translatable="false">
+        <!--item>msn</item-->
+        <item>foreca</item>
+        <item>wunderground</item>
+        <item>accuweather</item>
+    </string-array>
+    <string-array name="citydb_provider_entries">
+        <item>Foreca</item>
+        <item>Accuweather</item>
+    </string-array>
+    <string-array name="citydb_provider_values" translatable="false">
+        <item>citydb_foreca</item>
+        <item>citydb_accuweather</item>
+    </string-array>
+    <string-array name="moon_phases_entries">
+        <item>這個月</item>
+        <item>本年度</item>
+    </string-array>
+    <string-array name="moon_phases_values" translatable="false">
+        <item>moon_phases_month</item>
+        <item>moon_phases_year</item>
+    </string-array>
+    <string-array name="widget_clock_font_entries">
+        <item>@string/settings_widgets_widget_clock_font_default</item>
+        <item>AndroidClock.ttf</item>
+        <item>Clockopia.ttf</item>
+        <item>Helvetica.ttf</item>
+        <item>Roboto-Light.ttf</item>
+        <item>Roboto-Regular.ttf</item>
+        <item>Roboto-Thin.ttf</item>
     </string-array>
 </resources>
