--- a/res/values-uk/arrays.xml
+++ b/res/values-uk/arrays.xml
@@ -250,253 +250,253 @@
         <item>pm</item>
     </string-array>
     <string-array name="country_names">
-<item>Андорра</item>
-<item>Об'єднані Арабські Емірати</item>
-<item>Афганістан</item>
-<item>Антигуа і Барбуда</item>
-<item>Ангілья</item>
-<item>Албанія</item>
-<item>Вірменія</item>
-<item>Нідерландські Антильські острови</item>
-<item>Ангола</item>
-<item>Антарктида</item>
-<item>Аргентина</item>
-<item>Американське Самоа</item>
-<item>Австрія</item>
-<item>Австралія</item>
-<item>Аруба</item>
-<item>Аландські острови</item>
-<item>Азербайджан</item>
-<item>Боснія і Герцеговина</item>
-<item>Барбадос</item>
-<item>Бангладеш</item>
-<item>Бельгія</item>
-<item>Буркіна-Фасо</item>
-<item>Болгарія</item>
-<item>Бахрейн</item>
-<item>Бурунді</item>
-<item>Бенін</item>
-<item>Бермудські острови</item>
-<item>Бруней-Даруссалам</item>
-<item>Болівія</item>
-<item>Бразилія</item>
-<item>Багамські острови</item>
-<item>Бутан</item>
-<item>острів Буве</item>
-<item>Ботсвана</item>
-<item>Білорусь</item>
-<item>Беліз</item>
-<item>Канада</item>
-<item>Кокосові (Кілінг) острови</item>
-<item>Демократична Республіка Конго</item>
-<item>Центрально-Африканська Республіка</item>
-<item>Конго</item>
-<item>Швейцарія</item>
-<item>Кот-Д’Івуар (Берег Слонової Кістки)</item>
-<item>острови Кука</item>
-<item>Чилі</item>
-<item>Камерун</item>
-<item>Китай</item>
-<item>Колумбія</item>
-<item>Коста-Ріка</item>
-<item>Сербія і Чорногорія</item>
-<item>Куба</item>
-<item>Кабо-Верде</item>
-<item>острів Різдва</item>
-<item>Кіпр</item>
-<item>Чеська республіка</item>
-<item>Німеччина</item>
-<item>Джібуті</item>
-<item>Данія</item>
-<item>Домініка</item>
-<item>Домініканська Республіка</item>
-<item>Алжир</item>
-<item>Еквадор</item>
-<item>Естонія</item>
-<item>Єгипет</item>
-<item>Західна Сахара</item>
-<item>Еритрея</item>
-<item>Іспанія</item>
-<item>Ефіопія</item>
-<item>Фінляндія</item>
-<item>Фіджі</item>
-<item>Фолклендські (Мальвінські) острови</item>
-<item>Федеральні Штати Мікронезії</item>
-<item>Фарерські острови</item>
-<item>Франція</item>
-<item>Франція, метрополія</item>
-<item>Габон</item>
-<item>Великобританія</item>
-<item>Гренада</item>
-<item>Грузія</item>
-<item>Французька Гвіана</item>
-<item>Гана</item>
-<item>Гібралтар</item>
-<item>Гренландія</item>
-<item>Гамбія</item>
-<item>Гвінея</item>
-<item>Гваделупа</item>
-<item>Екваторіальна Гвінея</item>
-<item>Греція</item>
-<item>Південна Георгія і Південні Сандвічеви острови</item>
-<item>Гватемала</item>
-<item>Гуам</item>
-<item>Гвінея-Бісау</item>
-<item>Гайана</item>
-<item>Гонконг</item>
-<item>Острів Херд і Острови Макдональд</item>
-<item>Гондурас</item>
-<item>Хорватія</item>
-<item>Гаїті</item>
-<item>Угорщина</item>
-<item>Індонезія</item>
-<item>Ірландія</item>
-<item>Ізраїль</item>
-<item>Індія</item>
-<item>Британська територія Індійського океану</item>
-<item>Ірак</item>
-<item>Іран</item>
-<item>Ісландія</item>
-<item>Італія</item>
-<item>Ямайка</item>
-<item>Йорданія</item>
-<item>Японія</item>
-<item>Кенія</item>
-<item>Киргизія</item>
-<item>Камбоджа</item>
-<item>Кірібаті</item>
-<item>Коморські острови</item>
-<item>Сент-Кітс і Невіс</item>
-<item>Корея (Північна)</item>
-<item>Корея (Південна)</item>
-<item>Кувейт</item>
-<item>Кайманові острови</item>
-<item>Казахстан</item>
-<item>Лаос</item>
-<item>Ліван</item>
-<item>Сент-Люсія</item>
-<item>Ліхтенштейн</item>
-<item>Шрі Ланка</item>
-<item>Ліберія</item>
-<item>Лесото</item>
-<item>Литва</item>
-<item>Люксембург</item>
-<item>Латвія</item>
-<item>Лівія</item>
-<item>Марокко</item>
-<item>Монако</item>
-<item>Молдова</item>
-<item>Мадагаскар</item>
-<item>Маршаллові острови</item>
-<item>Македонія</item>
-<item>Малі</item>
-<item>М'янма</item>
-<item>Монголія</item>
-<item>Макао</item>
-<item>Північні Маріанські острови</item>
-<item>Мартинюк</item>
-<item>Мавританія</item>
-<item>Монтсеррат</item>
-<item>Мальта</item>
-<item>Маврикій</item>
-<item>Мальдіви</item>
-<item>Малаві</item>
-<item>Мексика</item>
-<item>Малайзія</item>
-<item>Мозамбік</item>
-<item>Намібія</item>
-<item>Нова Каледонія</item>
-<item>Нігер</item>
-<item>острів Норфолк</item>
-<item>Нігерія</item>
-<item>Нікарагуа</item>
-<item>Нідерланди</item>
-<item>Норвегія</item>
-<item>Непал</item>
-<item>Науру</item>
-<item>Ніуе (Савідж)</item>
-<item>Нова Зеландія</item>
-<item>Оман</item>
-<item>Панама</item>
-<item>Перу</item>
-<item>Французька Полінезія</item>
-<item>Папуа-Нова Гвінея</item>
-<item>Філіппіни</item>
-<item>Пакистан</item>
-<item>Польща</item>
-<item>Сен-П'єр і Мікелон</item>
-<item>Піткерн</item>
-<item>Пуерто-Ріко</item>
-<item>Палестинська територія</item>
-<item>Португалія</item>
-<item>Палау</item>
-<item>Парагвай</item>
-<item>Катар</item>
-<item>Реюньйон</item>
-<item>Румунія</item>
-<item>Російська Федерація</item>
-<item>Руанда</item>
-<item>Саудівська Аравія</item>
-<item>Соломонові Острови</item>
-<item>Сейшельські острови</item>
-<item>Судан</item>
-<item>Швеція</item>
-<item>Сінгапур</item>
-<item>острів Святої Єлени</item>
-<item>Словенія</item>
-<item>Шпіцберген і Ян-Маєн</item>
-<item>Словаччина</item>
-<item>Сьєрра-Леоне</item>
-<item>Сан-Маріно</item>
-<item>Сенегал</item>
-<item>Сомалі</item>
-<item>Суринам</item>
-<item>Сан-Томе і Прінсіпі</item>
-<item>СРСР (колишній)</item>
-<item>Сальвадор</item>
-<item>Сирія</item>
-<item>Свазіленд</item>
-<item>Острови Теркс і Кайкос</item>
-<item>Чад</item>
-<item>Французькі південні території</item>
-<item>Того</item>
-<item>Таїланд</item>
-<item>Таджикистан</item>
-<item>Токелау</item>
-<item>Тимор-Лешті</item>
-<item>Туркменістан</item>
-<item>Туніс</item>
-<item>Тонга</item>
-<item>Східний Тимор</item>
-<item>Туреччина</item>
-<item>Тринідад і Тобаго</item>
-<item>Тувалу</item>
-<item>Тайвань</item>
-<item>Танзанія</item>
-<item>Україна</item>
-<item>Уганда</item>
-<item>Великобританія</item>
-<item>Зовнішні малі острови США</item>
-<item>США</item>
-<item>Уругвай</item>
-<item>Узбекистан</item>
-<item>Ватикан (Святий Престол)</item>
-<item>Сент-Вінсент і Гренадіни</item>
-<item>Венесуела</item>
-<item>Віргінські острови (Британські)</item>
-<item>Віргінські острови (США)</item>
-<item>В'єтнам</item>
-<item>Вануату</item>
-<item>Волліс і Футуна</item>
-<item>Самоа</item>
-<item>Ємен</item>
-<item>Майотта</item>
-<item>Югославія (колишня)</item>
-<item>ПАР</item>
-<item>Замбія</item>
-<item>Заїр (колишній)</item>
-<item>Зімбабве</item>
-<item>Сен-П'єр і Мікелон</item>
+        <item>Андорра</item>
+        <item>Об\'єднані Арабські Емірати</item>
+        <item>Афганістан</item>
+        <item>Антигуа і Барбуда</item>
+        <item>Ангілья</item>
+        <item>Албанія</item>
+        <item>Вірменія</item>
+        <item>Нідерландські Антильські острови</item>
+        <item>Ангола</item>
+        <item>Антарктида</item>
+        <item>Аргентина</item>
+        <item>Американське Самоа</item>
+        <item>Австрія</item>
+        <item>Австралія</item>
+        <item>Аруба</item>
+        <item>Аландські острови</item>
+        <item>Азербайджан</item>
+        <item>Боснія і Герцеговина</item>
+        <item>Барбадос</item>
+        <item>Бангладеш</item>
+        <item>Бельгія</item>
+        <item>Буркіна-Фасо</item>
+        <item>Болгарія</item>
+        <item>Бахрейн</item>
+        <item>Бурунді</item>
+        <item>Бенін</item>
+        <item>Бермудські острови</item>
+        <item>Бруней-Даруссалам</item>
+        <item>Болівія</item>
+        <item>Бразилія</item>
+        <item>Багамські острови</item>
+        <item>Бутан</item>
+        <item>острів Буве</item>
+        <item>Ботсвана</item>
+        <item>Білорусь</item>
+        <item>Беліз</item>
+        <item>Канада</item>
+        <item>Кокосові (Кілінг) острови</item>
+        <item>Демократична Республіка Конго</item>
+        <item>Центрально-Африканська Республіка</item>
+        <item>Конго</item>
+        <item>Швейцарія</item>
+        <item>Кот-Д\’Івуар (Берег Слонової Кістки)</item>
+        <item>острови Кука</item>
+        <item>Чилі</item>
+        <item>Камерун</item>
+        <item>Китай</item>
+        <item>Колумбія</item>
+        <item>Коста-Ріка</item>
+        <item>Сербія і Чорногорія</item>
+        <item>Куба</item>
+        <item>Кабо-Верде</item>
+        <item>острів Різдва</item>
+        <item>Кіпр</item>
+        <item>Чеська республіка</item>
+        <item>Німеччина</item>
+        <item>Джібуті</item>
+        <item>Данія</item>
+        <item>Домініка</item>
+        <item>Домініканська Республіка</item>
+        <item>Алжир</item>
+        <item>Еквадор</item>
+        <item>Естонія</item>
+        <item>Єгипет</item>
+        <item>Західна Сахара</item>
+        <item>Еритрея</item>
+        <item>Іспанія</item>
+        <item>Ефіопія</item>
+        <item>Фінляндія</item>
+        <item>Фіджі</item>
+        <item>Фолклендські (Мальвінські) острови</item>
+        <item>Федеральні Штати Мікронезії</item>
+        <item>Фарерські острови</item>
+        <item>Франція</item>
+        <item>Франція, метрополія</item>
+        <item>Габон</item>
+        <item>Великобританія</item>
+        <item>Гренада</item>
+        <item>Грузія</item>
+        <item>Французька Гвіана</item>
+        <item>Гана</item>
+        <item>Гібралтар</item>
+        <item>Гренландія</item>
+        <item>Гамбія</item>
+        <item>Гвінея</item>
+        <item>Гваделупа</item>
+        <item>Екваторіальна Гвінея</item>
+        <item>Греція</item>
+        <item>Південна Георгія і Південні Сандвічеви острови</item>
+        <item>Гватемала</item>
+        <item>Гуам</item>
+        <item>Гвінея-Бісау</item>
+        <item>Гайана</item>
+        <item>Гонконг</item>
+        <item>Острів Херд і Острови Макдональд</item>
+        <item>Гондурас</item>
+        <item>Хорватія</item>
+        <item>Гаїті</item>
+        <item>Угорщина</item>
+        <item>Індонезія</item>
+        <item>Ірландія</item>
+        <item>Ізраїль</item>
+        <item>Індія</item>
+        <item>Британська територія Індійського океану</item>
+        <item>Ірак</item>
+        <item>Іран</item>
+        <item>Ісландія</item>
+        <item>Італія</item>
+        <item>Ямайка</item>
+        <item>Йорданія</item>
+        <item>Японія</item>
+        <item>Кенія</item>
+        <item>Киргизія</item>
+        <item>Камбоджа</item>
+        <item>Кірібаті</item>
+        <item>Коморські острови</item>
+        <item>Сент-Кітс і Невіс</item>
+        <item>Корея (Північна)</item>
+        <item>Корея (Південна)</item>
+        <item>Кувейт</item>
+        <item>Кайманові острови</item>
+        <item>Казахстан</item>
+        <item>Лаос</item>
+        <item>Ліван</item>
+        <item>Сент-Люсія</item>
+        <item>Ліхтенштейн</item>
+        <item>Шрі Ланка</item>
+        <item>Ліберія</item>
+        <item>Лесото</item>
+        <item>Литва</item>
+        <item>Люксембург</item>
+        <item>Латвія</item>
+        <item>Лівія</item>
+        <item>Марокко</item>
+        <item>Монако</item>
+        <item>Молдова</item>
+        <item>Мадагаскар</item>
+        <item>Маршаллові острови</item>
+        <item>Македонія</item>
+        <item>Малі</item>
+        <item>М\'янма</item>
+        <item>Монголія</item>
+        <item>Макао</item>
+        <item>Північні Маріанські острови</item>
+        <item>Мартинюк</item>
+        <item>Мавританія</item>
+        <item>Монтсеррат</item>
+        <item>Мальта</item>
+        <item>Маврикій</item>
+        <item>Мальдіви</item>
+        <item>Малаві</item>
+        <item>Мексика</item>
+        <item>Малайзія</item>
+        <item>Мозамбік</item>
+        <item>Намібія</item>
+        <item>Нова Каледонія</item>
+        <item>Нігер</item>
+        <item>острів Норфолк</item>
+        <item>Нігерія</item>
+        <item>Нікарагуа</item>
+        <item>Нідерланди</item>
+        <item>Норвегія</item>
+        <item>Непал</item>
+        <item>Науру</item>
+        <item>Ніуе (Савідж)</item>
+        <item>Нова Зеландія</item>
+        <item>Оман</item>
+        <item>Панама</item>
+        <item>Перу</item>
+        <item>Французька Полінезія</item>
+        <item>Папуа-Нова Гвінея</item>
+        <item>Філіппіни</item>
+        <item>Пакистан</item>
+        <item>Польща</item>
+        <item>Сен-П\'єр і Мікелон</item>
+        <item>Піткерн</item>
+        <item>Пуерто-Ріко</item>
+        <item>Палестинська територія</item>
+        <item>Португалія</item>
+        <item>Палау</item>
+        <item>Парагвай</item>
+        <item>Катар</item>
+        <item>Реюньйон</item>
+        <item>Румунія</item>
+        <item>Російська Федерація</item>
+        <item>Руанда</item>
+        <item>Саудівська Аравія</item>
+        <item>Соломонові Острови</item>
+        <item>Сейшельські острови</item>
+        <item>Судан</item>
+        <item>Швеція</item>
+        <item>Сінгапур</item>
+        <item>острів Святої Єлени</item>
+        <item>Словенія</item>
+        <item>Шпіцберген і Ян-Маєн</item>
+        <item>Словаччина</item>
+        <item>Сьєрра-Леоне</item>
+        <item>Сан-Маріно</item>
+        <item>Сенегал</item>
+        <item>Сомалі</item>
+        <item>Суринам</item>
+        <item>Сан-Томе і Прінсіпі</item>
+        <item>СРСР (колишній)</item>
+        <item>Сальвадор</item>
+        <item>Сирія</item>
+        <item>Свазіленд</item>
+        <item>Острови Теркс і Кайкос</item>
+        <item>Чад</item>
+        <item>Французькі південні території</item>
+        <item>Того</item>
+        <item>Таїланд</item>
+        <item>Таджикистан</item>
+        <item>Токелау</item>
+        <item>Тимор-Лешті</item>
+        <item>Туркменістан</item>
+        <item>Туніс</item>
+        <item>Тонга</item>
+        <item>Східний Тимор</item>
+        <item>Туреччина</item>
+        <item>Тринідад і Тобаго</item>
+        <item>Тувалу</item>
+        <item>Тайвань</item>
+        <item>Танзанія</item>
+        <item>Україна</item>
+        <item>Уганда</item>
+        <item>Великобританія</item>
+        <item>Зовнішні малі острови США</item>
+        <item>США</item>
+        <item>Уругвай</item>
+        <item>Узбекистан</item>
+        <item>Ватикан (Святий Престол)</item>
+        <item>Сент-Вінсент і Гренадіни</item>
+        <item>Венесуела</item>
+        <item>Віргінські острови (Британські)</item>
+        <item>Віргінські острови (США)</item>
+        <item>В\'єтнам</item>
+        <item>Вануату</item>
+        <item>Волліс і Футуна</item>
+        <item>Самоа</item>
+        <item>Ємен</item>
+        <item>Майотта</item>
+        <item>Югославія (колишня)</item>
+        <item>ПАР</item>
+        <item>Замбія</item>
+        <item>Заїр (колишній)</item>
+        <item>Зімбабве</item>
+        <item>Сен-П\'єр і Мікелон</item>
     </string-array>
     <string-array name="donations_google_android_market_promt_array">
         <item>1 Євро</item>
